Bug 205744 - Default address book is not the one selected by the user.
Summary: Default address book is not the one selected by the user.
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-31 01:26 UTC by Sabine Faure
Modified: 2009-09-23 23:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-08-31 01:26:36 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kaddressbook
- Create two empty addressbooks (ex: AB1 and AB2)
- Select AB1 and click on the 'New Contact' button

The address book selected by default in the 'New Contact' dialogue is not AB1 which is confusing.

Could it be possible to make it so?

Also could it be possible to move a Contact from one address book to another from the 'Edit Contact' dialogue?

Trunk, Svn Rev 1016607
Comment 1 Tobias Koenig 2009-09-04 18:25:39 UTC
SVN commit 1019853 by tokoe:

Set the current selected address book as default address book
in the contact editor.

BUG: 205744


 M  +9 -0      mainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019853
Comment 2 Sabine Faure 2009-09-10 19:44:14 UTC
I still have the same bug.
I tried to found out why and here are more detailled steps to reproduce this bug:

- Launch Kaddressbook
- Import a .vcf file addressbooks (ex: AB0) using File menu/Import/import vCard...
- And create two empty addressbooks (ex: AB1 and AB2)
- Select AB1 and click on the 'New Contact' button

The address book selected by default in the 'New Contact' dialogue is not AB1
but AB0 which is confusing.

Trunk, Svn Rev 1021831
Comment 3 Sabine Faure 2009-09-11 18:46:02 UTC
Hi Tobias,

Since you told me you could not reproduce this bug, here are new steps that hopefully will help you to see it:

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook
- In the Address book column you should have two address books: Contacts (from the Kolab IMAP) and std.vcf
- select std.vcf and click on the 'New Contact' button
- The 'New Contact' dialogue opens

But in the 'Add to' combo box you can see that 'Contacts' has been selected automatically even though you selected std.vcf

Trunk, Svn Rev 1022237
Comment 4 David Faure 2009-09-17 17:35:36 UTC
Hi Tobias,

about the patch you sent sabine:

it tells us that the method is not called at all.

I added debug output in the AsyncSelectionHandler constructor, and that one is called (so the recompile + restart kontact way of testing was correct), but the waitForCollection method is not called.
Comment 5 Tobias Koenig 2009-09-18 16:59:23 UTC
SVN commit 1025376 by tokoe:

Forward the newContact()/newGroup() actions to the KAddressBook part.

BUG: 205744


 M  +1 -1      CMakeLists.txt  
 M  +20 -7     kaddressbook_plugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1025376
Comment 6 Sabine Faure 2009-09-23 23:32:33 UTC
It is corrected now.


The selected address book is the same one in which the new contact will be added.

Trunk, Svn Rev 1027237