Set the current selected address book as default address book in the contact editor.

BUG: 205744

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1019853